add old implementation

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Babylon JS Electron App</title>
+    <title>program to control lego walker</title>
     <style>
         html,
         body {
