--- a/txtindex.html
+++ b/txtindex.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>program to control lego walker</title>
+    <title>program to control lego walker --txt</title>
     <style>
         html,
         body {
@@ -13,21 +13,13 @@
             margin: 0;
             padding: 0;
         }
-
-        #render-canvas {
-            width: 100%;
-            height: 100%;
-            touch-action: none;
-        }
     </style>
 </head>
 
 <body>
-    <canvas id="render-canvas"></canvas>
     <script>
-        require('./app/renderer.js');
+        require('./app/txtrenderer.js');
     </script>
 </body>
 
 </html>
-
