make rotation and tilt switchable

--- a/guiindex.html
+++ b/guiindex.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>program to control lego walker</title>
+  <title id="title">lego walker</title>
   <style>
     html,
     body {
@@ -14,7 +14,7 @@
       padding: 0;
     }
 
-    #render-canvas {
+    #canvas {
       width: 100%;
       height: 100%;
       touch-action: none;
@@ -23,7 +23,7 @@
 </head>
 
 <body>
-  <canvas id="render-canvas"></canvas>
+  <canvas id="canvas"></canvas>
   <script>
     require('./app/guirenderer.js');
   </script>
