--- a/txtindex.html
+++ b/txtindex.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>program to control lego walker</title>
+  <title id="title">lego walker</title>
 </head>
 
 <body>
