move html to public folder

--- a/public/txtindex.html
+++ b/public/txtindex.html
@@ -33,7 +33,7 @@
     <button id="legBackLeftMount">0.00°</button>
   </p>
   <script>
-    require('./app/txtrenderer.js');
+    require('../app/txtrenderer.js');
   </script>
 </body>
 
