implement new interface

--- a/public/guiindex.html
+++ b/public/guiindex.html
@@ -25,7 +25,7 @@
 <body>
   <canvas id="canvas"></canvas>
   <script>
-    require('../app/guirenderer.js');
+    require('../app/gui/renderer.js');
   </script>
 </body>
 
