--- a/public/txtindex.html
+++ b/public/txtindex.html
@@ -14,9 +14,9 @@
       <th id="hubFrontRight" colspan="3">FrontRight</th>
     </tr>
     <tr align="right">
-      <td><button id="legFrontLeftMount">0.00°</button></td>
-      <td><button id="legFrontLeftTop">0.00°</button></td>
       <td><button id="legFrontLeftBottom">0.00°</button></td>
+      <td><button id="legFrontLeftTop">0.00°</button></td>
+      <td><button id="legFrontLeftMount">0.00°</button></td>
       <td><button id="legFrontRightMount">0.00°</button></td>
       <td><button id="legFrontRightTop">0.00°</button></td>
       <td><button id="legFrontRightBottom">0.00°</button></td>
@@ -31,6 +31,9 @@
     </tr>
     <tr><td colspan="6" align="center"><table>
     <tr>
+      <th id="hubFrontCenter" colspan="3">FrontCenter</th>
+    </tr>
+    <tr>
       <th id="dog" colspan="3">Dog</th>
     </tr>
     <tr align="right">
@@ -38,15 +41,18 @@
       <td><button id="dogY">0</button></td>
       <td><button id="dogZ">0</button></td>
     </tr>
+    <tr>
+      <th id="hubBackCenter" colspan="3">BackCenter</th>
+    </tr>
     </table></td></tr>
     <tr>
       <th id="hubBackLeft" colspan="3">BackLeft</th>
       <th id="hubBackRight" colspan="3">BackRight</th>
     </tr>
     <tr align="right">
-      <td><button id="legBackLeftMount">0.00°</button></td>
-      <td><button id="legBackLeftTop">0.00°</button></td>
       <td><button id="legBackLeftBottom">0.00°</button></td>
+      <td><button id="legBackLeftTop">0.00°</button></td>
+      <td><button id="legBackLeftMount">0.00°</button></td>
       <td><button id="legBackRightMount">0.00°</button></td>
       <td><button id="legBackRightTop">0.00°</button></td>
       <td><button id="legBackRightBottom">0.00°</button></td>
